--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -15,22 +15,23 @@ This chapter requires the following packages are installed:
 |psych              |
 |tidyverse          |
 
-**Important Note:** that you should NOT use library(psych) at any point. There are major conflict between the psych package and the tidyverse. We will access the psych package command by preceding each command with psych:: instead of using library(psych).
+**Important Note:** that you should NOT use library(psych) at any point. There are major conflicts between the psych package and the tidyverse. We will access the psych package command by preceding each command with psych:: instead of using library(psych).
 
 ## Objective
-
 
 ## Context
 
 Due to a number of high profile failure to replicate study results [@cos2015] it's become increasingly clear that there is a general crisis of confidence in many areas of science [@baker2016]. Statistical (and other) explanations have been offered [@simmons2011] for why it's hard to replicate results across different sets of data. However, scientists are also finding it challenging to recreate the numbers in their papers using their own data. Indeed, the editor of Molecular Brain asked authors to submit the data used to create the numbers in published papers and found that the wrong data was submitted for 40 out of 41 papers [@miyakawa2020].
 
-Consequently, some researchers have suggested that it is critical to distinguish between replication and reproducibility [@patil2019]. Replication refers to trying to obtain the same result from a different data sets. Reproducibility refers to trying to obtain the same results from the same data set. It may seem that reproducibility should be given - but it's not. Correspondingly, there a trend is for journals and authors to adopt Transparency and Openness Promotion (TOP) [guidelines](https://www.cos.io/our-services/top-guidelines
+Consequently, some researchers have suggested that it is critical to distinguish between replication and reproducibility [@patil2019]. Replication refers to trying to obtain the same result from a different data sets. Reproducibility refers to trying to obtain the same results from the same data set. Unfortunately, some authors use these two terms interchangably and fail to make any distinction between them. I encourage you to make the distinction and the use the terms consist with use sugggested by [@patil2019].
+
+It may seem that reproducibility should be given - but it's not. Correspondingly, there a trend is for journals and authors to adopt Transparency and Openness Promotion (TOP) [guidelines](https://www.cos.io/our-services/top-guidelines
 ). These guidelines involve such things as making your materials, data, code, and analysis scripts available on public repositories so anyone can check your data. A new open science journal rating system has even emerged called the [TOP Factor](https://topfactor.org
 ).
 
-The idea is not that open science articles are  more trustworthy that other types of articles -- the idea is that trust doesn't play a role. Anyone can inspect the data using the scripts and data provided by authors. It's really just the same as making your science available for auditing the way financial records can be audited. The problems reported at Molecular Brain (doubtless is common to many journals) are avoided with open science - because the data and scripts needed to reproduce the numbers in the articles are uploaded prior to publication. 
+The idea is not that open science articles are  more trustworthy that other types of articles -- the idea is that trust doesn't play a role. Anyone can inspect the data using the scripts and data provided by authors. It's really just the same as making your science available for auditing the way financial records can be audited. But just like in the world of business some people don't like the idea of make it possible for other to audit their work. The problems reported at Molecular Brain (doubtless is common to many journals) are likely avoided with open science - because the data and scripts needed to reproduce the numbers in the articles are uploaded prior to publication. 
 
-The TOP open science guidelines have made an impact and some newer journals, such as Meta Psycchology, have fully embraced open science. Figure \@ref(fig:metapsychology) shows the header from an [article](https://open.lnu.se/index.php/metapsychology/article/view/1630/2266) in Meta Psychology that clearly delineates the open science attributes of the article. Take note that the header even specifies who checked that the analyses in the article were reproducible from the scripts and data made publicly available by the authors.
+The TOP open science guidelines have made an impact and some newer journals, such as Meta Psychology, have fully embraced open science. Figure \@ref(fig:metapsychology) shows the header from an [article](https://open.lnu.se/index.php/metapsychology/article/view/1630/2266) in Meta Psychology that clearly delineates the open science attributes of the article that used computer simulations (instead of participant data). Take note that the header even specifies who checked that the analyses in the article were reproducible.
 
 ```{r metapsychology, echo=FALSE, out.width="100%", fig.cap="Open science in an article header"}
 knitr::include_graphics("ch_score_items/images/screenshot_metapsychology.png")
@@ -51,7 +52,7 @@ As a result of this perspective on data, it's important that you think about str
 
 ## Begin with the end in mind
 
-In this chapter we will walk you though the steps from data collection, data entry, loading raw data, and the creation of analytic data via preprocessing scripts. These steps are outlined in Figure \@ref(fig:pipeline). This figure makes a clear distinction between raw data and analytic data. Raw data refers to the data as you entered it into a spreadsheet or received it from survey software. Analytic data the data the has been structured and processed so that it is ready for analyis. This pre-processing could include such things as identifying categorical variables to the computer, combining multiple items measuring the same thing into scale scale scores, among other tasks.
+In this chapter we will walk you though the steps from data collection, data entry, loading raw data, and the creation of data you will analyze,  analytic data, via preprocessing scripts. These steps are outlined in Figure \@ref(fig:pipeline). This figure makes a clear distinction between raw data and analytic data. Raw data refers to the data as you entered it into a spreadsheet or received it from survey software. Analytic data the data the has been structured and processed so that it is ready for analyis. This pre-processing could include such things as identifying categorical variables to the computer, combining multiple items measuring the same thing into scale scale scores, among other tasks.
 
 It's critial that you don't think of analysis of your results as being completely removed from the data collection and data entry choices you make. Poor choices at the data collection and data entry stage can make your life substantially more complicated when it comes time to write the preprocessing script that will convert your raw data to analytic data. The mantra of this chapter is *begin with the end in mind*.
 
@@ -70,7 +71,7 @@ When conducting many types of analyses it is necessary to have data in a format 
 1. Each variable forms a column.
 2. Each observation forms a row.
 
-The tidy data format can be initially challenging for some researchers to understand because it is based on thinking about, and structuring data, in terms of observations/measurements instead of participants. In this section we will describe common approaches to entering animal and human particpant data and how they can be done keeping the  tidy data requirement in mind. It's not essential that data be entered in a tidy data format but it is essential that you enter data in way that makes it easy to later convert data to a tidy data format.  When dealing with animal or human participant data it's common to enter data into a spreadsheet. Each row of the spreadsheet is typically used to represent a single participant and each column of the spreadshet is used to represent a variable.
+The tidy data format can be initially challenging for some researchers to understand because it is based on thinking about, and structuring data, in terms of observations/measurements instead of participants. In this section we will describe common approaches to entering animal and human participant data and how they can be done keeping the tidy data requirement in mind. It's not essential that data be entered in a tidy data format but it is essential that you enter data in manner that makes it easy to later convert data to a tidy data format.  When dealing with animal or human participant data it's common to enter data into a spreadsheet. Each row of the spreadsheet is typically used to represent a single participant and each column of the spreadshet is used to represent a variable.
 
 **Between participant data**. Consider  Table \@ref(tab:betweenex) which illustrates between particpant data for six human particpants running 5 kilometers  The first column is id, which indicates there are six unique participants and provides and identification number for each of them. The id is the varible and there is one observation per row - so the id column conforms to tidy data specification. The second column is sex, which is a varible, and there is one observation per for row, so sex also conforms to the tidy data specification. Finally, there is a last column five_km_time which is a variable with one observation per row -- also conforming to tidy data specification. Thus, single occasion between subject data like this conforms to the tidy data specification. There is usually nothing you need to do to convert between participant data (or cross-sectional data) to be in a tidy data format.
 
@@ -85,7 +86,7 @@ knitr::kable(
 ```
 
 
-**Within participant data**. Consider  Table \@ref(tab:withinex) which illustrates within particpant data for six human particpants running 5 kilometers - but on three different occasions. The first column is id, which indicates there are six unique participants and provides and identification number for each of them. The id is the varible and there is one observation per row - so the id column conforms to tidy data specification. The second column is sex, which is a varible, and there is one observation per for row, so sex also conforms to the tidy data specification. Next, there are three different columns (march, may, july) representing the levels of a single variable. That is the within subject variable is occasion and the levels of that variable are march, june, and july. The march column contains the times for participants in March. The may column contians the times for particpants in May. The july column contains the times for participants in July, These three columns are not in a tidy data format. 
+**Within participant data**. Consider  Table \@ref(tab:withinex) which illustrates within particpant data for six human particpants running 5 kilometers - but on three different occasions. The first column is id, which indicates there are six unique participants and provides and identification number for each of them. The id is the varible and there is one observation per row - so the id column conforms to tidy data specification. The second column is sex, which is a varible, and there is one observation per for row, so sex also conforms to the tidy data specification. Next, there are three different columns (march, may, july) representing the levels of a single variable. That is the within subject variable is occasion and the levels of that variable are march, june, and july. The march column contains the times for participants in March. The may column contains the times for participants in May. The july column contains the times for participants in July, These three columns are not in a tidy data format. 
 
 
 ```{r withinex, echo = FALSE}
@@ -114,7 +115,7 @@ knitr::kable(
 ```
 
 
-The problem with the format of the data in Table \@ref(tab:withinex) is that march, may, and july are levels of single variable, occasion, that is not represented in the data. Nowhere in the Table \@ref(tab:withinex) can you see the variable occasion. This single variable is presented over three columns - a very confusing situation. Moreover, due to the way the columns are labelled it's not clear what is being measured. Nowhere in  Table \@ref(tab:withinex) can you see the variable time. Thus with the format used in \@ref(tab:withinex) you don't know what the predictor (occassion) is nor do you know the dependent varible (time). Thus, a major problem with entering data in this format is that there are hidden variables in the data and you need insider knowledge to know the columns represent. That said, this is not necessarily a terrible way to enter your data as long as you have all of this missing information documented in a data code book.
+The problem with the format of the data in Table \@ref(tab:withinex) is that march, may, and july are levels of single variable, occasion, that is not represented in the data. Nowhere in the Table \@ref(tab:withinex) can you see the label occasion. This single variable is presented over three columns - a very confusing situation. Moreover, due to the way the columns are labelled it's not clear what is being measured. Nowhere in  Table \@ref(tab:withinex) can you see the variable elapsedtime. Thus with the format used in \@ref(tab:withinex) you don't know what the predictor (occassion) is nor do you know the dependent varible (elapsedtime.). Thus, a major problem with entering data in this format is that there are hidden variables in the data and you need insider knowledge to know the columns represent. That said, this is not necessarily a terrible way to enter your data as long as you have all of this missing information documented in a data code book.
 
 
 | Disadvantages one row per participant  | Advantages one row per participant | 
@@ -131,39 +132,6 @@ Why did we walk you through this technical treatment of structuring data within 
 
 
 ## Data collection and entry
-
-### Question with numerical answers
-
-### Likert-type items
-
-relate back to select function in previous chapter 
-
-### Multi-item scales
-
-### Questions with categorical answers
-Avoid categorical if not really categorical
-Avoid numerical representation of categorical variables
-
-### Levels of an independent varible 
-
-### Levels of a single within participant variable
-
-### Levels of multiple within participant variables
-relate back to select function in previous chapter 
-
-Do this one first when generating above advice
-
-
-
-
-Surveys - use meaningful names
-- use meaningful names for subsets
-
--sample size analysis
--unfeasible article by lakens
-
-
-
 - data are collected in different ways
 - data collected by programs in the lab that require 
 - lab measurements paper and entering later
@@ -171,41 +139,59 @@ Surveys - use meaningful names
 - website surveys 
 - a mix of all of the above
 
-each trial is a row - multiple rows per person...
-
-Distinguish between entering data and not. But also think about what's not confusing...
-talk about wide not showing DV or IV just levels of IV
-
-
-if you're writing a cognitive program or making a survey think about the variable names
-think about how the data is outputted.
-
-
-If you have entirely within person data then tidy is the obvious choice
-If you have entirely between then wide makes sense
-If you have a mix - it's more difficult. Different research area. Think about the problems. 
-
-For example, a good data code book is essential if you have wide with repeated measures variables because there is no way to tell what the IV or DV is by inspecting the data.
-
-
-
-
-TIDYVERSE NAMING CONVENTION ARE IMPORTANT BECAUSE IN SOME CASES THEY ARE REQUIRED for the SCRIPTS to work. If you haven't following the naming conventions you may be making your life quite difficult.
-
-
-
-
-
 Think about
 - missing data 
 - column names
 - representation of categorical variables in the data set
-
-
 - computer/web collection
 
+### Question with numerical answers
+
+### Likert-type items
+
+Likert type scales. 
+
+Score and analysis section of wikipedia page
+https://en.wikipedia.org/wiki/Likert_scale
+Basic issue if if the data is orginal or interval. Is the psychological interval between 1 and 2 the same as the numerical interval between 1 an 2.
+Mean, standard deviation, and averaging is in appropriate.
+Probably avoid this concern by simply labelling the end points and none of the middle points.
+See wiki references.
 
 
+You can add the labels later with if needed. Basic distinction - if you plan to do a numerical analysis or create scales enter the numbers. If you plan to treat them as cateogrical responses enter labels.
+
+
+Enter the numbers, not the labels strongly agree etc. into your data
+if you have a measure with subscale label the items in your survey etc by subscale
+affcomm1  affcomm2, affcomi
+
+avoid labels like AC1, AC2 these are insufficiently unique. Consequently it may be hard to select them with a command like starts_with()
+
+besure to indicate reverse key items using a suffix at the end of the column name
+besure to indicate for reservse key items the range of the scale 0 to 5 or 1 to 6. The actual numbers used on the scale will dictate how the items are reverse keyed.
+
+
+### Categorical classifications (between participant)
+
+Avoid numerical representation of categorical variables. Don't use 1 or 2 to represent sex. Use male and female in your speadsheet - likewise in yoru survey program.
+Similarily don't use 1, 2, 3, for education if you plan to analyze it as a categorical variable, indicate the levels "elementary", "secondardy", "college", etc.
+
+Likewise, for between particpant variables drug_condition don't use 1 or 2 use "drug" and "placebo" but the actually drug name would be better.s
+
+
+
+### Categorical classifications (between participant)
+
+If you have an stdu that is a survey over time.....
+
+
+If you have a sstudy that involves a within- or within/between particpants ANOVA design be very carefuly how you collect an name that data.
+
+Andy Field discussess ..... within/between data...
+ see data set from apaTAbles
+
+For example, a good data code book is essential if you have wide with repeated measures variables because there is no way to tell what the IV or DV is by inspecting the data.
 
 
 ## Raw data
